--- a/.gitignore
+++ b/.gitignore
@@ -233,3 +233,33 @@ dist/Auto Send New Files Selfbot 1.0.0/_internal/setuptools/_vendor/wheel-0.43.0
 dist/Auto Send New Files Selfbot 1.0.0/_internal/setuptools/_vendor/wheel-0.43.0.dist-info/WHEEL
 dist/Auto Send New Files Selfbot 1.0.0/_internal/win32/win32crypt.pyd
 dist/Auto Send New Files Selfbot 1.0.0/_internal/yarl/_quoting_c.cp312-win_amd64.pyd
+build/AutoSendNewFilesSelfbot 1.1.0/Analysis-00.toc
+build/AutoSendNewFilesSelfbot 1.1.0/AutoSendNewFilesSelfbot 1.1.0.pkg
+build/AutoSendNewFilesSelfbot 1.1.0/base_library.zip
+build/AutoSendNewFilesSelfbot 1.1.0/EXE-00.toc
+build/AutoSendNewFilesSelfbot 1.1.0/PKG-00.toc
+build/AutoSendNewFilesSelfbot 1.1.0/PYZ-00.pyz
+build/AutoSendNewFilesSelfbot 1.1.0/PYZ-00.toc
+build/AutoSendNewFilesSelfbot 1.1.0/warn-AutoSendNewFilesSelfbot 1.1.0.txt
+build/AutoSendNewFilesSelfbot 1.1.0/xref-AutoSendNewFilesSelfbot 1.1.0.html
+build/AutoSendNewFilesSelfbot 1.1.0/localpycs/pyimod01_archive.pyc
+build/AutoSendNewFilesSelfbot 1.1.0/localpycs/pyimod02_importers.pyc
+build/AutoSendNewFilesSelfbot 1.1.0/localpycs/pyimod03_ctypes.pyc
+build/AutoSendNewFilesSelfbot 1.1.0/localpycs/pyimod04_pywin32.pyc
+build/AutoSendNewFilesSelfbot 1.1.0/localpycs/struct.pyc
+build/AutoSendNewFilesSelfbot 1.1.1/Analysis-00.toc
+build/AutoSendNewFilesSelfbot 1.1.1/AutoSendNewFilesSelfbot 1.1.1.pkg
+build/AutoSendNewFilesSelfbot 1.1.1/base_library.zip
+build/AutoSendNewFilesSelfbot 1.1.1/EXE-00.toc
+build/AutoSendNewFilesSelfbot 1.1.1/PKG-00.toc
+build/AutoSendNewFilesSelfbot 1.1.1/PYZ-00.pyz
+build/AutoSendNewFilesSelfbot 1.1.1/PYZ-00.toc
+build/AutoSendNewFilesSelfbot 1.1.1/warn-AutoSendNewFilesSelfbot 1.1.1.txt
+build/AutoSendNewFilesSelfbot 1.1.1/xref-AutoSendNewFilesSelfbot 1.1.1.html
+build/AutoSendNewFilesSelfbot 1.1.1/localpycs/pyimod01_archive.pyc
+build/AutoSendNewFilesSelfbot 1.1.1/localpycs/pyimod02_importers.pyc
+build/AutoSendNewFilesSelfbot 1.1.1/localpycs/pyimod03_ctypes.pyc
+build/AutoSendNewFilesSelfbot 1.1.1/localpycs/pyimod04_pywin32.pyc
+build/AutoSendNewFilesSelfbot 1.1.1/localpycs/struct.pyc
+dist/AutoSendNewFilesSelfbot 1.1.0.exe
+dist/AutoSendNewFilesSelfbot 1.1.1.exe
