even more stuff

--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,5 @@ build/AutoSendNewFilesSelfbot 1.1.1/localpycs/pyimod04_pywin32.pyc
 build/AutoSendNewFilesSelfbot 1.1.1/localpycs/struct.pyc
 dist/AutoSendNewFilesSelfbot 1.1.0.exe
 dist/AutoSendNewFilesSelfbot 1.1.1.exe
+AutoSendNewFilesSelfbot 1.1.0.spec
+AutoSendNewFilesSelfbot 1.1.1.spec
