--- a/example.env
+++ b/example.env
@@ -1,9 +1,13 @@
+### Selfbot config
 TOKEN=""
 CHANNEL_ID=
-
+### Webhook config
 WEBHOOK_URL=""
 
+### Files config
 CLIPS_DIRECTORY=""
 CLIPS_EXTENSION="mp3"
 
+### Extra [optionals]
 RECURSIVE_DIRECTORY="false"
+SECONDS=
