--- a/.gitignore
+++ b/.gitignore
@@ -265,3 +265,4 @@ dist/AutoSendNewFilesSelfbot 1.1.0.exe
 dist/AutoSendNewFilesSelfbot 1.1.1.exe
 AutoSendNewFilesSelfbot 1.1.0.spec
 AutoSendNewFilesSelfbot 1.1.1.spec
+old_files.txt
