--- a/example.env
+++ b/example.env
@@ -5,8 +5,8 @@ CHANNEL_ID=
 WEBHOOK_URL=""
 
 ### Files config
-CLIPS_DIRECTORY=""
-CLIPS_EXTENSION="mp3"
+FILES_DIRECTORY=""
+FILES_EXTENSION="mp3"
 
 ### Extra [optionals]
 RECURSIVE_DIRECTORY="false"
