--- a/.gitignore
+++ b/.gitignore
@@ -266,3 +266,4 @@ dist/AutoSendNewFilesSelfbot 1.1.1.exe
 AutoSendNewFilesSelfbot 1.1.0.spec
 AutoSendNewFilesSelfbot 1.1.1.spec
 old_files.txt
+app.py
