--- a/.gitignore
+++ b/.gitignore
@@ -267,3 +267,6 @@ AutoSendNewFilesSelfbot 1.1.0.spec
 AutoSendNewFilesSelfbot 1.1.1.spec
 old_files.txt
 app.py
+executable/__pycache__/util.cpython-312.pyc
+src/__pycache__/config.cpython-312.pyc
+src/__pycache__/files_handler.cpython-312.pyc
