--- a/.gitignore
+++ b/.gitignore
@@ -271,3 +271,5 @@ executable/__pycache__/util.cpython-312.pyc
 src/__pycache__/config.cpython-312.pyc
 src/__pycache__/files_handler.cpython-312.pyc
 test.py
+executable/config_handler.py
+executable/config.json
