--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,5 @@ src/__pycache__/files_handler.cpython-312.pyc
 test.py
 executable/config_handler.py
 executable/config.json
+executable/__pycache__/config_handler.cpython-312.pyc
+config.json
