--- a/.gitignore
+++ b/.gitignore
@@ -1,277 +1,14 @@
 /.env
 /.venv
+/__pycache__
+src/__pycache__/
 /clips
 /todo.txt
-/__pycache__
-old_clips.txt
-build/main/Analysis-00.toc
-build/main/base_library.zip
-build/main/COLLECT-00.toc
-build/main/EXE-00.toc
-build/main/main.exe
-build/main/main.pkg
-build/main/PKG-00.toc
-build/main/PYZ-00.pyz
-build/main/PYZ-00.toc
-build/main/warn-main.txt
-build/main/xref-main.html
-build/main/localpycs/pyimod01_archive.pyc
-build/main/localpycs/pyimod02_importers.pyc
-build/main/localpycs/pyimod03_ctypes.pyc
-build/main/localpycs/pyimod04_pywin32.pyc
-build/main/localpycs/struct.pyc
-dist/main/Auto Send New Files Selfbot.zip
-dist/main/AutoSendNewFilesSelfbot.exe
-dist/main/_internal/_asyncio.pyd
-dist/main/_internal/_bz2.pyd
-dist/main/_internal/_cffi_backend.cp312-win_amd64.pyd
-dist/main/_internal/_ctypes.pyd
-dist/main/_internal/_decimal.pyd
-dist/main/_internal/_hashlib.pyd
-dist/main/_internal/_lzma.pyd
-dist/main/_internal/_multiprocessing.pyd
-dist/main/_internal/_overlapped.pyd
-dist/main/_internal/_queue.pyd
-dist/main/_internal/_socket.pyd
-dist/main/_internal/_ssl.pyd
-dist/main/_internal/_uuid.pyd
-dist/main/_internal/_wmi.pyd
-dist/main/_internal/base_library.zip
-dist/main/_internal/libcrypto-3.dll
-dist/main/_internal/libffi-8.dll
-dist/main/_internal/libssl-3.dll
-dist/main/_internal/pyexpat.pyd
-dist/main/_internal/python3.dll
-dist/main/_internal/python312.dll
-dist/main/_internal/select.pyd
-dist/main/_internal/unicodedata.pyd
-dist/main/_internal/VCRUNTIME140_1.dll
-dist/main/_internal/VCRUNTIME140.dll
-dist/main/_internal/Crypto/Cipher/_ARC4.pyd
-dist/main/_internal/Crypto/Cipher/_chacha20.pyd
-dist/main/_internal/Crypto/Cipher/_pkcs1_decode.pyd
-dist/main/_internal/Crypto/Cipher/_raw_aes.pyd
-dist/main/_internal/Crypto/Cipher/_raw_aesni.pyd
-dist/main/_internal/Crypto/Cipher/_raw_arc2.pyd
-dist/main/_internal/Crypto/Cipher/_raw_blowfish.pyd
-dist/main/_internal/Crypto/Cipher/_raw_cast.pyd
-dist/main/_internal/Crypto/Cipher/_raw_cbc.pyd
-dist/main/_internal/Crypto/Cipher/_raw_cfb.pyd
-dist/main/_internal/Crypto/Cipher/_raw_ctr.pyd
-dist/main/_internal/Crypto/Cipher/_raw_des.pyd
-dist/main/_internal/Crypto/Cipher/_raw_des3.pyd
-dist/main/_internal/Crypto/Cipher/_raw_ecb.pyd
-dist/main/_internal/Crypto/Cipher/_raw_eksblowfish.pyd
-dist/main/_internal/Crypto/Cipher/_raw_ocb.pyd
-dist/main/_internal/Crypto/Cipher/_raw_ofb.pyd
-dist/main/_internal/Crypto/Cipher/_Salsa20.pyd
-dist/main/_internal/Crypto/Hash/_BLAKE2b.pyd
-dist/main/_internal/Crypto/Hash/_BLAKE2s.pyd
-dist/main/_internal/Crypto/Hash/_ghash_clmul.pyd
-dist/main/_internal/Crypto/Hash/_ghash_portable.pyd
-dist/main/_internal/Crypto/Hash/_keccak.pyd
-dist/main/_internal/Crypto/Hash/_MD2.pyd
-dist/main/_internal/Crypto/Hash/_MD4.pyd
-dist/main/_internal/Crypto/Hash/_MD5.pyd
-dist/main/_internal/Crypto/Hash/_poly1305.pyd
-dist/main/_internal/Crypto/Hash/_RIPEMD160.pyd
-dist/main/_internal/Crypto/Hash/_SHA1.pyd
-dist/main/_internal/Crypto/Hash/_SHA224.pyd
-dist/main/_internal/Crypto/Hash/_SHA256.pyd
-dist/main/_internal/Crypto/Hash/_SHA384.pyd
-dist/main/_internal/Crypto/Hash/_SHA512.pyd
-dist/main/_internal/Crypto/Math/_modexp.pyd
-dist/main/_internal/Crypto/Protocol/_scrypt.pyd
-dist/main/_internal/Crypto/PublicKey/_curve448.pyd
-dist/main/_internal/Crypto/PublicKey/_curve25519.pyd
-dist/main/_internal/Crypto/PublicKey/_ec_ws.pyd
-dist/main/_internal/Crypto/PublicKey/_ed448.pyd
-dist/main/_internal/Crypto/PublicKey/_ed25519.pyd
-dist/main/_internal/Crypto/Util/_cpuid_c.pyd
-dist/main/_internal/Crypto/Util/_strxor.pyd
-dist/main/_internal/aiohttp/_helpers.cp312-win_amd64.pyd
-dist/main/_internal/aiohttp/_http_parser.cp312-win_amd64.pyd
-dist/main/_internal/aiohttp/_http_writer.cp312-win_amd64.pyd
-dist/main/_internal/aiohttp/_websocket.cp312-win_amd64.pyd
-dist/main/_internal/attrs-24.2.0.dist-info/INSTALLER
-dist/main/_internal/attrs-24.2.0.dist-info/METADATA
-dist/main/_internal/attrs-24.2.0.dist-info/RECORD
-dist/main/_internal/attrs-24.2.0.dist-info/WHEEL
-dist/main/_internal/attrs-24.2.0.dist-info/licenses/LICENSE
-dist/main/_internal/certifi/cacert.pem
-dist/main/_internal/certifi/py.typed
-dist/main/_internal/charset_normalizer/md__mypyc.cp312-win_amd64.pyd
-dist/main/_internal/charset_normalizer/md.cp312-win_amd64.pyd
-dist/main/_internal/frozenlist/_frozenlist.cp312-win_amd64.pyd
-dist/main/_internal/google/_upb/_message.pyd
-dist/main/_internal/multidict/_multidict.cp312-win_amd64.pyd
-dist/main/_internal/nacl/_sodium.pyd
-dist/main/_internal/nacl/py.typed
-dist/main/_internal/pywin32_system32/pywintypes312.dll
-dist/main/_internal/setuptools/_vendor/importlib_metadata-8.0.0.dist-info/INSTALLER
-dist/main/_internal/setuptools/_vendor/importlib_metadata-8.0.0.dist-info/LICENSE
-dist/main/_internal/setuptools/_vendor/importlib_metadata-8.0.0.dist-info/METADATA
-dist/main/_internal/setuptools/_vendor/importlib_metadata-8.0.0.dist-info/RECORD
-dist/main/_internal/setuptools/_vendor/importlib_metadata-8.0.0.dist-info/REQUESTED
-dist/main/_internal/setuptools/_vendor/importlib_metadata-8.0.0.dist-info/top_level.txt
-dist/main/_internal/setuptools/_vendor/importlib_metadata-8.0.0.dist-info/WHEEL
-dist/main/_internal/setuptools/_vendor/jaraco/text/Lorem ipsum.txt
-dist/main/_internal/setuptools/_vendor/wheel-0.43.0.dist-info/entry_points.txt
-dist/main/_internal/setuptools/_vendor/wheel-0.43.0.dist-info/INSTALLER
-dist/main/_internal/setuptools/_vendor/wheel-0.43.0.dist-info/LICENSE.txt
-dist/main/_internal/setuptools/_vendor/wheel-0.43.0.dist-info/METADATA
-dist/main/_internal/setuptools/_vendor/wheel-0.43.0.dist-info/RECORD
-dist/main/_internal/setuptools/_vendor/wheel-0.43.0.dist-info/REQUESTED
-dist/main/_internal/setuptools/_vendor/wheel-0.43.0.dist-info/WHEEL
-dist/main/_internal/win32/win32crypt.pyd
-dist/main/_internal/yarl/_quoting_c.cp312-win_amd64.pyd
-util.py
-main.spec
-main.py
-dist/Auto Send New Files Selfbot 1.0.0/Auto Send New Files Selfbot 1.0.0.zip
-dist/Auto Send New Files Selfbot 1.0.0/AutoSendNewFilesSelfbot 1.0.0.exe
-dist/Auto Send New Files Selfbot 1.0.0/_internal/_asyncio.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/_bz2.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/_cffi_backend.cp312-win_amd64.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/_ctypes.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/_decimal.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/_hashlib.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/_lzma.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/_multiprocessing.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/_overlapped.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/_queue.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/_socket.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/_ssl.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/_uuid.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/_wmi.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/base_library.zip
-dist/Auto Send New Files Selfbot 1.0.0/_internal/libcrypto-3.dll
-dist/Auto Send New Files Selfbot 1.0.0/_internal/libffi-8.dll
-dist/Auto Send New Files Selfbot 1.0.0/_internal/libssl-3.dll
-dist/Auto Send New Files Selfbot 1.0.0/_internal/pyexpat.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/python3.dll
-dist/Auto Send New Files Selfbot 1.0.0/_internal/python312.dll
-dist/Auto Send New Files Selfbot 1.0.0/_internal/select.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/unicodedata.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/VCRUNTIME140_1.dll
-dist/Auto Send New Files Selfbot 1.0.0/_internal/VCRUNTIME140.dll
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Cipher/_ARC4.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Cipher/_chacha20.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Cipher/_pkcs1_decode.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Cipher/_raw_aes.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Cipher/_raw_aesni.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Cipher/_raw_arc2.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Cipher/_raw_blowfish.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Cipher/_raw_cast.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Cipher/_raw_cbc.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Cipher/_raw_cfb.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Cipher/_raw_ctr.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Cipher/_raw_des.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Cipher/_raw_des3.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Cipher/_raw_ecb.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Cipher/_raw_eksblowfish.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Cipher/_raw_ocb.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Cipher/_raw_ofb.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Cipher/_Salsa20.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Hash/_BLAKE2b.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Hash/_BLAKE2s.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Hash/_ghash_clmul.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Hash/_ghash_portable.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Hash/_keccak.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Hash/_MD2.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Hash/_MD4.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Hash/_MD5.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Hash/_poly1305.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Hash/_RIPEMD160.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Hash/_SHA1.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Hash/_SHA224.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Hash/_SHA256.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Hash/_SHA384.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Hash/_SHA512.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Math/_modexp.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Protocol/_scrypt.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/PublicKey/_curve448.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/PublicKey/_curve25519.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/PublicKey/_ec_ws.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/PublicKey/_ed448.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/PublicKey/_ed25519.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Util/_cpuid_c.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/Crypto/Util/_strxor.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/aiohttp/_helpers.cp312-win_amd64.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/aiohttp/_http_parser.cp312-win_amd64.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/aiohttp/_http_writer.cp312-win_amd64.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/aiohttp/_websocket.cp312-win_amd64.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/attrs-24.2.0.dist-info/INSTALLER
-dist/Auto Send New Files Selfbot 1.0.0/_internal/attrs-24.2.0.dist-info/METADATA
-dist/Auto Send New Files Selfbot 1.0.0/_internal/attrs-24.2.0.dist-info/RECORD
-dist/Auto Send New Files Selfbot 1.0.0/_internal/attrs-24.2.0.dist-info/WHEEL
-dist/Auto Send New Files Selfbot 1.0.0/_internal/attrs-24.2.0.dist-info/licenses/LICENSE
-dist/Auto Send New Files Selfbot 1.0.0/_internal/certifi/cacert.pem
-dist/Auto Send New Files Selfbot 1.0.0/_internal/certifi/py.typed
-dist/Auto Send New Files Selfbot 1.0.0/_internal/charset_normalizer/md__mypyc.cp312-win_amd64.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/charset_normalizer/md.cp312-win_amd64.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/frozenlist/_frozenlist.cp312-win_amd64.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/google/_upb/_message.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/multidict/_multidict.cp312-win_amd64.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/nacl/_sodium.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/nacl/py.typed
-dist/Auto Send New Files Selfbot 1.0.0/_internal/pywin32_system32/pywintypes312.dll
-dist/Auto Send New Files Selfbot 1.0.0/_internal/setuptools/_vendor/importlib_metadata-8.0.0.dist-info/INSTALLER
-dist/Auto Send New Files Selfbot 1.0.0/_internal/setuptools/_vendor/importlib_metadata-8.0.0.dist-info/LICENSE
-dist/Auto Send New Files Selfbot 1.0.0/_internal/setuptools/_vendor/importlib_metadata-8.0.0.dist-info/METADATA
-dist/Auto Send New Files Selfbot 1.0.0/_internal/setuptools/_vendor/importlib_metadata-8.0.0.dist-info/RECORD
-dist/Auto Send New Files Selfbot 1.0.0/_internal/setuptools/_vendor/importlib_metadata-8.0.0.dist-info/REQUESTED
-dist/Auto Send New Files Selfbot 1.0.0/_internal/setuptools/_vendor/importlib_metadata-8.0.0.dist-info/top_level.txt
-dist/Auto Send New Files Selfbot 1.0.0/_internal/setuptools/_vendor/importlib_metadata-8.0.0.dist-info/WHEEL
-dist/Auto Send New Files Selfbot 1.0.0/_internal/setuptools/_vendor/jaraco/text/Lorem ipsum.txt
-dist/Auto Send New Files Selfbot 1.0.0/_internal/setuptools/_vendor/wheel-0.43.0.dist-info/entry_points.txt
-dist/Auto Send New Files Selfbot 1.0.0/_internal/setuptools/_vendor/wheel-0.43.0.dist-info/INSTALLER
-dist/Auto Send New Files Selfbot 1.0.0/_internal/setuptools/_vendor/wheel-0.43.0.dist-info/LICENSE.txt
-dist/Auto Send New Files Selfbot 1.0.0/_internal/setuptools/_vendor/wheel-0.43.0.dist-info/METADATA
-dist/Auto Send New Files Selfbot 1.0.0/_internal/setuptools/_vendor/wheel-0.43.0.dist-info/RECORD
-dist/Auto Send New Files Selfbot 1.0.0/_internal/setuptools/_vendor/wheel-0.43.0.dist-info/REQUESTED
-dist/Auto Send New Files Selfbot 1.0.0/_internal/setuptools/_vendor/wheel-0.43.0.dist-info/WHEEL
-dist/Auto Send New Files Selfbot 1.0.0/_internal/win32/win32crypt.pyd
-dist/Auto Send New Files Selfbot 1.0.0/_internal/yarl/_quoting_c.cp312-win_amd64.pyd
-build/AutoSendNewFilesSelfbot 1.1.0/Analysis-00.toc
-build/AutoSendNewFilesSelfbot 1.1.0/AutoSendNewFilesSelfbot 1.1.0.pkg
-build/AutoSendNewFilesSelfbot 1.1.0/base_library.zip
-build/AutoSendNewFilesSelfbot 1.1.0/EXE-00.toc
-build/AutoSendNewFilesSelfbot 1.1.0/PKG-00.toc
-build/AutoSendNewFilesSelfbot 1.1.0/PYZ-00.pyz
-build/AutoSendNewFilesSelfbot 1.1.0/PYZ-00.toc
-build/AutoSendNewFilesSelfbot 1.1.0/warn-AutoSendNewFilesSelfbot 1.1.0.txt
-build/AutoSendNewFilesSelfbot 1.1.0/xref-AutoSendNewFilesSelfbot 1.1.0.html
-build/AutoSendNewFilesSelfbot 1.1.0/localpycs/pyimod01_archive.pyc
-build/AutoSendNewFilesSelfbot 1.1.0/localpycs/pyimod02_importers.pyc
-build/AutoSendNewFilesSelfbot 1.1.0/localpycs/pyimod03_ctypes.pyc
-build/AutoSendNewFilesSelfbot 1.1.0/localpycs/pyimod04_pywin32.pyc
-build/AutoSendNewFilesSelfbot 1.1.0/localpycs/struct.pyc
-build/AutoSendNewFilesSelfbot 1.1.1/Analysis-00.toc
-build/AutoSendNewFilesSelfbot 1.1.1/AutoSendNewFilesSelfbot 1.1.1.pkg
-build/AutoSendNewFilesSelfbot 1.1.1/base_library.zip
-build/AutoSendNewFilesSelfbot 1.1.1/EXE-00.toc
-build/AutoSendNewFilesSelfbot 1.1.1/PKG-00.toc
-build/AutoSendNewFilesSelfbot 1.1.1/PYZ-00.pyz
-build/AutoSendNewFilesSelfbot 1.1.1/PYZ-00.toc
-build/AutoSendNewFilesSelfbot 1.1.1/warn-AutoSendNewFilesSelfbot 1.1.1.txt
-build/AutoSendNewFilesSelfbot 1.1.1/xref-AutoSendNewFilesSelfbot 1.1.1.html
-build/AutoSendNewFilesSelfbot 1.1.1/localpycs/pyimod01_archive.pyc
-build/AutoSendNewFilesSelfbot 1.1.1/localpycs/pyimod02_importers.pyc
-build/AutoSendNewFilesSelfbot 1.1.1/localpycs/pyimod03_ctypes.pyc
-build/AutoSendNewFilesSelfbot 1.1.1/localpycs/pyimod04_pywin32.pyc
-build/AutoSendNewFilesSelfbot 1.1.1/localpycs/struct.pyc
-dist/AutoSendNewFilesSelfbot 1.1.0.exe
-dist/AutoSendNewFilesSelfbot 1.1.1.exe
-AutoSendNewFilesSelfbot 1.1.0.spec
-AutoSendNewFilesSelfbot 1.1.1.spec
 old_files.txt
+executable/
+specs/
+build/
+dist/
 app.py
-executable/__pycache__/util.cpython-312.pyc
-src/__pycache__/config.cpython-312.pyc
-src/__pycache__/files_handler.cpython-312.pyc
-test.py
-executable/config_handler.py
-executable/config.json
-executable/__pycache__/config_handler.cpython-312.pyc
 config.json
+test.py
